# jira-mcp-py

./: .env.example  README.md  main.py  pyproject.toml
jira_mcp/: __init__.py  config.py  jira_client.py  schemas.py  server.py
