[project]
name = "jira-mcp-py"
version = "0.1.0"
description = "Readonly remote MCP server for Jira Data Center"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.27.0",
]

[project.scripts]
jira-mcp = "jira_mcp:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jira_mcp"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
